<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/eatman_round"
        android:scaleType="fitXY"
        android:contentDescription="TODO"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="35dp"
        android:id="@+id/linearLayout"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp">

        <Button
            android:layout_width="175dp"
            android:layout_height="65dp"
            android:onClick="showPlayScreen"
            android:text="@string/nextLevel"
            android:layout_above="@+id/linearLayout"
            android:layout_alignLeft="@+id/linearLayout"
            android:layout_alignStart="@+id/linearLayout" />

        <Button
            android:layout_width="175dp"
            android:layout_height="65dp"
            android:text="@string/settingsLabel"
            android:layout_marginBottom="5dp" />

        <Button
            android:layout_width="175dp"
            android:layout_height="65dp"
            android:onClick="showHelpScreen"
            android:text="@string/help" />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/wonGame"
        android:id="@+id/textView3"
        android:layout_marginTop="39dp"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="@dimen/abc_action_bar_stacked_max_height"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold|italic"
        android:typeface="normal"
        android:background="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/keepPlaying"
        android:id="@+id/textView4"
        android:layout_above="@+id/linearLayout"
        android:textColor="@android:color/holo_orange_light"
        android:textStyle="bold"
        android:typeface="normal"
        android:layout_alignRight="@+id/textView3"
        android:layout_alignEnd="@+id/textView3" />

</RelativeLayout>