<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:src="@drawable/eatman_round"
        android:scaleType="fitXY"
        android:contentDescription="TODO" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_marginBottom="100dp"
        android:layout_marginLeft="35dp" >

        <Button
            android:layout_width="175dp"
            android:layout_height="65dp"
            android:onClick="showPlayScreen"
            android:text="@string/play"
            android:layout_marginBottom="5dp" />

        <Button
            android:layout_width="175dp"
            android:layout_height="65dp"
            android:onClick="showHelpScreen"
            android:text="@string/help" />

        <Button
            android:layout_width="175dp"
            android:layout_height="65dp"
            android:text="@string/settingsLabel"
            android:layout_marginBottom="5dp" />
    </LinearLayout>
</RelativeLayout>